fix bug click below body not dismiss ads preview + fix bug show ads preview on FireFox

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -30,10 +30,12 @@
     font-size: 28px; }
 
 html {
-  overflow-y: scroll; }
+  overflow-y: scroll;
+  height: 100%; }
 
 body {
-  background: #eff3f8; }
+  background: #eff3f8;
+  min-height: 100%; }
 
 .container-main {
   padding-bottom: 30px; }
@@ -76,7 +78,6 @@ body {
   text-align: center; }
 
 div.panel.no-heading-panel {
-  margin-bottom: 0;
-}
+  margin-bottom: 0; }
 
 /*# sourceMappingURL=app.css.map */
